[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-SAM4IS"
version = "0.1.5"
description = "Create annotations for instance segmentation using Segment Anything models"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Hiroki Kawai", email = "h.kawai888@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.0",
    "magicgui>=0.8.0",
    "qtpy>=2.4.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-image>=0.21.0",
    "napari>=0.4.19",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/hiroalchem/napari-SAM4IS/issues"
"Documentation" = "https://github.com/hiroalchem/napari-SAM4IS#README.md"
"Source Code" = "https://github.com/hiroalchem/napari-SAM4IS"
"User Support" = "https://github.com/hiroalchem/napari-SAM4IS/issues"

[project.optional-dependencies]
testing = [
    "tox",
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0,<6.0",
    "pytest-qt>=4.2.0,<5.0",
]
dev = [
    "black>=24.0,<25.0",
    "ruff>=0.8.0,<1.0",
    "pre-commit",
]

[project.entry-points."napari.manifest"]
napari-SAM4IS = "napari_sam4is:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "fonts/*.ttf"]

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 79
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]
