[metadata]
name = napari-SAM4IS
version = attr: napari_sam4is.__version__
description = Create annotations for instance segmentation using Segment Anything models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hiroalchem/napari-SAM4IS
author = Hiroki Kawai
author_email = h.kawai888@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/hiroalchem/napari-SAM4IS/issues
    Documentation = https://github.com/hiroalchem/napari-SAM4IS#README.md
    Source Code = https://github.com/hiroalchem/napari-SAM4IS
    User Support = https://github.com/hiroalchem/napari-SAM4IS/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    pytorch
    torchvision
    scikit-image

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-SAM4IS = napari_sam4is:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5



[options.package_data]
* = *.yaml
